--- a/views/articles/new.ejs
+++ b/views/articles/new.ejs
@@ -1,6 +1,6 @@
 <h1>New Article</h1>
 
-<form action="/articles">
+<form action="/articles" method="post">
 	<input type="text" name="article[title]" placeholder="Article title">
 	<input type="text" name="article[author]" placeholder="Article author">
 	<textarea name="article[desc]" placeholder="Article Description"></textarea>
