added header/footer partials

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>New Article</title>
+	<title>The Daily Planet</title>
 </head>
 <body>
-	<% include 'header.ejs' %>
-	<%- body %>
+	<% include "partials/header.ejs" %>
+
+	<%= body %>
 	
 </body>
 </html>
