--- a/views/articles/articles.ejs
+++ b/views/articles/articles.ejs
@@ -1,3 +1,4 @@
+<%- include ../partials/header.ejs %>
 <h1>Articles</h1>
 
 <ul>
@@ -5,3 +6,5 @@
 		<li><%= article.title %></li>
 	<% }) %>
 </ul>
+
+<%- include ../partials/footer.ejs %>
