--- a/views/articles/new.ejs
+++ b/views/articles/new.ejs
@@ -1,3 +1,4 @@
+<%- include ../partials/header.ejs %>
 <h1>New Article</h1>
 
 <form action="/articles" method="post">
@@ -7,3 +8,4 @@
 
 	<input type="submit" value="Add article">
 </form>
+<%- include ../partials/footer.ejs %>
