--- a/views/articles/show.ejs
+++ b/views/articles/show.ejs
@@ -1,5 +1,7 @@
+<%- include ../partials/header.ejs %>
 <h1>Show an Article</h1>
 
 <h2><%= article.title %></h2>
 <p><%= article.author %></p>
 <p><%= article.desc %></p>
+<%- include ../partials/footer.ejs %>
