--- a/views/site/index.ejs
+++ b/views/site/index.ejs
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>New Article</title>
-</head>
-<body>
+<%- include ../partials/header.ejs %>
 	
 	<h1>News Articles</h1>
 	
-</body>
-</html>
+<%- include ../partials/footer.ejs %>
