--- a/views/site/index.ejs
+++ b/views/site/index.ejs
@@ -1,5 +1,4 @@
-<%- include ../partials/header.ejs %>
+
 	
-	<h1>News Articles</h1>
-	
-<%- include ../partials/footer.ejs %>
+<h1>News Articles</h1>	
+<h2>Welcome to the Daily Planet!</h2>
